tamm_old/transform_input/OpMinParser.py
# Generated from OpMin.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class OpMinParser ( Parser ):

    grammarFileName = "OpMin.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"'range'", u"'index'", u"'array'", u"'expand'", 
                     u"'volatile'", u"'iteration'", u"'+'", u"'-'", u"'*'", 
                     u"'='", u"'*='", u"'+='", u"'-='", u"'('", u"')'", 
                     u"'{'", u"'}'", u"'['", u"']'", u"','", u"':'", u"';'" ]

    symbolicNames = [ u"<INVALID>", u"RANGE", u"INDEX", u"ARRAY", u"EXPAND", 
                      u"VOLATILE", u"ITERATION", u"PLUS", u"MINUS", u"TIMES", 
                      u"EQUALS", u"TIMESEQUAL", u"PLUSEQUAL", u"MINUSEQUAL", 
                      u"LPAREN", u"RPAREN", u"LBRACE", u"RBRACE", u"LBRACKET", 
                      u"RBRACKET", u"COMMA", u"COLON", u"SEMI", u"ID", u"ICONST", 
                      u"FRAC", u"FCONST", u"COMMENT", u"WS" ]

    RULE_translation_unit = 0
    RULE_compound_element_list_opt = 1
    RULE_compound_element_list = 2
    RULE_compound_element_list_prime = 3
    RULE_compound_element = 4
    RULE_element_list_opt = 5
    RULE_element_list = 6
    RULE_element_list_prime = 7
    RULE_element = 8
    RULE_declaration = 9
    RULE_id_list_opt = 10
    RULE_id_list = 11
    RULE_id_list_prime = 12
    RULE_num_list = 13
    RULE_num_list_prime = 14
    RULE_identifier = 15
    RULE_numerical_constant = 16
    RULE_range_declaration = 17
    RULE_index_declaration = 18
    RULE_array_declaration = 19
    RULE_array_structure_list = 20
    RULE_array_structure_list_prime = 21
    RULE_astruct = 22
    RULE_array_structure = 23
    RULE_permut_symmetry_opt = 24
    RULE_symmetry_group_list = 25
    RULE_symmetry_group_list_prime = 26
    RULE_symmetry_group = 27
    RULE_expansion_declaration = 28
    RULE_volatile_declaration = 29
    RULE_iteration_declaration = 30
    RULE_statement = 31
    RULE_assignment_statement = 32
    RULE_assignment_operator = 33
    RULE_unary_expression = 34
    RULE_primary_expression = 35
    RULE_array_reference = 36
    RULE_expression = 37
    RULE_plusORminus = 38
    RULE_additive_expression = 39
    RULE_additive_expression_prime = 40
    RULE_multiplicative_expression = 41
    RULE_multiplicative_expression_prime = 42

    ruleNames =  [ u"translation_unit", u"compound_element_list_opt", u"compound_element_list", 
                   u"compound_element_list_prime", u"compound_element", 
                   u"element_list_opt", u"element_list", u"element_list_prime", 
                   u"element", u"declaration", u"id_list_opt", u"id_list", 
                   u"id_list_prime", u"num_list", u"num_list_prime", u"identifier", 
                   u"numerical_constant", u"range_declaration", u"index_declaration", 
                   u"array_declaration", u"array_structure_list", u"array_structure_list_prime", 
                   u"astruct", u"array_structure", u"permut_symmetry_opt", 
                   u"symmetry_group_list", u"symmetry_group_list_prime", 
                   u"symmetry_group", u"expansion_declaration", u"volatile_declaration", 
                   u"iteration_declaration", u"statement", u"assignment_statement", 
                   u"assignment_operator", u"unary_expression", u"primary_expression", 
                   u"array_reference", u"expression", u"plusORminus", u"additive_expression", 
                   u"additive_expression_prime", u"multiplicative_expression", 
                   u"multiplicative_expression_prime" ]

    EOF = Token.EOF
    RANGE=1
    INDEX=2
    ARRAY=3
    EXPAND=4
    VOLATILE=5
    ITERATION=6
    PLUS=7
    MINUS=8
    TIMES=9
    EQUALS=10
    TIMESEQUAL=11
    PLUSEQUAL=12
    MINUSEQUAL=13
    LPAREN=14
    RPAREN=15
    LBRACE=16
    RBRACE=17
    LBRACKET=18
    RBRACKET=19
    COMMA=20
    COLON=21
    SEMI=22
    ID=23
    ICONST=24
    FRAC=25
    FCONST=26
    COMMENT=27
    WS=28

    def __init__(self, input, output=sys.stdout):
        super(OpMinParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class Translation_unitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Translation_unitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def compound_element_list_opt(self):
            return self.getTypedRuleContext(OpMinParser.Compound_element_list_optContext,0)


        def EOF(self):
            return self.getToken(OpMinParser.EOF, 0)

        def getRuleIndex(self):
            return OpMinParser.RULE_translation_unit

        def accept(self, visitor):
            if hasattr(visitor, "visitTranslation_unit"):
                return visitor.visitTranslation_unit(self)
            else:
                return visitor.visitChildren(self)




    def translation_unit(self):

        localctx = OpMinParser.Translation_unitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_translation_unit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 86
            self.compound_element_list_opt()
            self.state = 87
            self.match(OpMinParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_element_list_optContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Compound_element_list_optContext, self).__init__(parent, invokingState)
            self.parser = parser

        def compound_element_list(self):
            return self.getTypedRuleContext(OpMinParser.Compound_element_listContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_compound_element_list_opt

        def accept(self, visitor):
            if hasattr(visitor, "visitCompound_element_list_opt"):
                return visitor.visitCompound_element_list_opt(self)
            else:
                return visitor.visitChildren(self)




    def compound_element_list_opt(self):

        localctx = OpMinParser.Compound_element_list_optContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_compound_element_list_opt)
        try:
            self.state = 91
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.EOF]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.LBRACE, OpMinParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 90
                self.compound_element_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_element_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Compound_element_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def compound_element(self):
            return self.getTypedRuleContext(OpMinParser.Compound_elementContext,0)


        def compound_element_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Compound_element_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_compound_element_list

        def accept(self, visitor):
            if hasattr(visitor, "visitCompound_element_list"):
                return visitor.visitCompound_element_list(self)
            else:
                return visitor.visitChildren(self)




    def compound_element_list(self):

        localctx = OpMinParser.Compound_element_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_compound_element_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.compound_element()
            self.state = 94
            self.compound_element_list_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_element_list_primeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Compound_element_list_primeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def compound_element(self):
            return self.getTypedRuleContext(OpMinParser.Compound_elementContext,0)


        def compound_element_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Compound_element_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_compound_element_list_prime

        def accept(self, visitor):
            if hasattr(visitor, "visitCompound_element_list_prime"):
                return visitor.visitCompound_element_list_prime(self)
            else:
                return visitor.visitChildren(self)




    def compound_element_list_prime(self):

        localctx = OpMinParser.Compound_element_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_element_list_prime)
        try:
            self.state = 100
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.EOF]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.LBRACE, OpMinParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 97
                self.compound_element()
                self.state = 98
                self.compound_element_list_prime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Compound_elementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Compound_elementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def LBRACE(self):
            return self.getToken(OpMinParser.LBRACE, 0)

        def element_list_opt(self):
            return self.getTypedRuleContext(OpMinParser.Element_list_optContext,0)


        def RBRACE(self):
            return self.getToken(OpMinParser.RBRACE, 0)

        def identifier(self):
            return self.getTypedRuleContext(OpMinParser.IdentifierContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_compound_element

        def accept(self, visitor):
            if hasattr(visitor, "visitCompound_element"):
                return visitor.visitCompound_element(self)
            else:
                return visitor.visitChildren(self)




    def compound_element(self):

        localctx = OpMinParser.Compound_elementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_compound_element)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==OpMinParser.ID:
                self.state = 102
                self.identifier()


            self.state = 105
            self.match(OpMinParser.LBRACE)
            self.state = 106
            self.element_list_opt()
            self.state = 107
            self.match(OpMinParser.RBRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Element_list_optContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Element_list_optContext, self).__init__(parent, invokingState)
            self.parser = parser

        def element_list(self):
            return self.getTypedRuleContext(OpMinParser.Element_listContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_element_list_opt

        def accept(self, visitor):
            if hasattr(visitor, "visitElement_list_opt"):
                return visitor.visitElement_list_opt(self)
            else:
                return visitor.visitChildren(self)




    def element_list_opt(self):

        localctx = OpMinParser.Element_list_optContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_element_list_opt)
        try:
            self.state = 111
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.RBRACE]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.RANGE, OpMinParser.INDEX, OpMinParser.ARRAY, OpMinParser.EXPAND, OpMinParser.VOLATILE, OpMinParser.ITERATION, OpMinParser.PLUS, OpMinParser.MINUS, OpMinParser.LPAREN, OpMinParser.ID, OpMinParser.ICONST, OpMinParser.FRAC, OpMinParser.FCONST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.element_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Element_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Element_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(OpMinParser.ElementContext,0)


        def element_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Element_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_element_list

        def accept(self, visitor):
            if hasattr(visitor, "visitElement_list"):
                return visitor.visitElement_list(self)
            else:
                return visitor.visitChildren(self)




    def element_list(self):

        localctx = OpMinParser.Element_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_element_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 113
            self.element()
            self.state = 114
            self.element_list_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Element_list_primeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Element_list_primeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def element(self):
            return self.getTypedRuleContext(OpMinParser.ElementContext,0)


        def element_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Element_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_element_list_prime

        def accept(self, visitor):
            if hasattr(visitor, "visitElement_list_prime"):
                return visitor.visitElement_list_prime(self)
            else:
                return visitor.visitChildren(self)




    def element_list_prime(self):

        localctx = OpMinParser.Element_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_element_list_prime)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.RBRACE]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.RANGE, OpMinParser.INDEX, OpMinParser.ARRAY, OpMinParser.EXPAND, OpMinParser.VOLATILE, OpMinParser.ITERATION, OpMinParser.PLUS, OpMinParser.MINUS, OpMinParser.LPAREN, OpMinParser.ID, OpMinParser.ICONST, OpMinParser.FRAC, OpMinParser.FCONST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 117
                self.element()
                self.state = 118
                self.element_list_prime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ElementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.ElementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def declaration(self):
            return self.getTypedRuleContext(OpMinParser.DeclarationContext,0)


        def statement(self):
            return self.getTypedRuleContext(OpMinParser.StatementContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_element

        def accept(self, visitor):
            if hasattr(visitor, "visitElement"):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = OpMinParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_element)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.RANGE, OpMinParser.INDEX, OpMinParser.ARRAY, OpMinParser.EXPAND, OpMinParser.VOLATILE, OpMinParser.ITERATION]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.declaration()
                pass
            elif token in [OpMinParser.PLUS, OpMinParser.MINUS, OpMinParser.LPAREN, OpMinParser.ID, OpMinParser.ICONST, OpMinParser.FRAC, OpMinParser.FCONST]:
                self.enterOuterAlt(localctx, 2)
                self.state = 123
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.DeclarationContext, self).__init__(parent, invokingState)
            self.parser = parser

        def range_declaration(self):
            return self.getTypedRuleContext(OpMinParser.Range_declarationContext,0)


        def index_declaration(self):
            return self.getTypedRuleContext(OpMinParser.Index_declarationContext,0)


        def array_declaration(self):
            return self.getTypedRuleContext(OpMinParser.Array_declarationContext,0)


        def expansion_declaration(self):
            return self.getTypedRuleContext(OpMinParser.Expansion_declarationContext,0)


        def volatile_declaration(self):
            return self.getTypedRuleContext(OpMinParser.Volatile_declarationContext,0)


        def iteration_declaration(self):
            return self.getTypedRuleContext(OpMinParser.Iteration_declarationContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_declaration

        def accept(self, visitor):
            if hasattr(visitor, "visitDeclaration"):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = OpMinParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_declaration)
        try:
            self.state = 132
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.RANGE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 126
                self.range_declaration()
                pass
            elif token in [OpMinParser.INDEX]:
                self.enterOuterAlt(localctx, 2)
                self.state = 127
                self.index_declaration()
                pass
            elif token in [OpMinParser.ARRAY]:
                self.enterOuterAlt(localctx, 3)
                self.state = 128
                self.array_declaration()
                pass
            elif token in [OpMinParser.EXPAND]:
                self.enterOuterAlt(localctx, 4)
                self.state = 129
                self.expansion_declaration()
                pass
            elif token in [OpMinParser.VOLATILE]:
                self.enterOuterAlt(localctx, 5)
                self.state = 130
                self.volatile_declaration()
                pass
            elif token in [OpMinParser.ITERATION]:
                self.enterOuterAlt(localctx, 6)
                self.state = 131
                self.iteration_declaration()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_list_optContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Id_list_optContext, self).__init__(parent, invokingState)
            self.parser = parser

        def id_list(self):
            return self.getTypedRuleContext(OpMinParser.Id_listContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_id_list_opt

        def accept(self, visitor):
            if hasattr(visitor, "visitId_list_opt"):
                return visitor.visitId_list_opt(self)
            else:
                return visitor.visitChildren(self)




    def id_list_opt(self):

        localctx = OpMinParser.Id_list_optContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_id_list_opt)
        try:
            self.state = 136
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.RBRACKET]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 135
                self.id_list()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Id_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def identifier(self):
            return self.getTypedRuleContext(OpMinParser.IdentifierContext,0)


        def id_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Id_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_id_list

        def accept(self, visitor):
            if hasattr(visitor, "visitId_list"):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = OpMinParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_id_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            self.identifier()
            self.state = 139
            self.id_list_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Id_list_primeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Id_list_primeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(OpMinParser.COMMA, 0)

        def identifier(self):
            return self.getTypedRuleContext(OpMinParser.IdentifierContext,0)


        def id_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Id_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_id_list_prime

        def accept(self, visitor):
            if hasattr(visitor, "visitId_list_prime"):
                return visitor.visitId_list_prime(self)
            else:
                return visitor.visitChildren(self)




    def id_list_prime(self):

        localctx = OpMinParser.Id_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_id_list_prime)
        try:
            self.state = 146
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.EQUALS, OpMinParser.RBRACKET, OpMinParser.SEMI]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.COMMA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 142
                self.match(OpMinParser.COMMA)
                self.state = 143
                self.identifier()
                self.state = 144
                self.id_list_prime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Num_listContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Num_listContext, self).__init__(parent, invokingState)
            self.parser = parser

        def numerical_constant(self):
            return self.getTypedRuleContext(OpMinParser.Numerical_constantContext,0)


        def num_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Num_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_num_list

        def accept(self, visitor):
            if hasattr(visitor, "visitNum_list"):
                return visitor.visitNum_list(self)
            else:
                return visitor.visitChildren(self)




    def num_list(self):

        localctx = OpMinParser.Num_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_num_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 148
            self.numerical_constant()
            self.state = 149
            self.num_list_prime()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Num_list_primeContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.Num_list_primeContext, self).__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(OpMinParser.COMMA, 0)

        def numerical_constant(self):
            return self.getTypedRuleContext(OpMinParser.Numerical_constantContext,0)


        def num_list_prime(self):
            return self.getTypedRuleContext(OpMinParser.Num_list_primeContext,0)


        def getRuleIndex(self):
            return OpMinParser.RULE_num_list_prime

        def accept(self, visitor):
            if hasattr(visitor, "visitNum_list_prime"):
                return visitor.visitNum_list_prime(self)
            else:
                return visitor.visitChildren(self)




    def num_list_prime(self):

        localctx = OpMinParser.Num_list_primeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_num_list_prime)
        try:
            self.state = 156
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [OpMinParser.RPAREN]:
                self.enterOuterAlt(localctx, 1)

                pass
            elif token in [OpMinParser.COMMA]:
                self.enterOuterAlt(localctx, 2)
                self.state = 152
                self.match(OpMinParser.COMMA)
                self.state = 153
                self.numerical_constant()
                self.state = 154
                self.num_list_prime()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class IdentifierContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(OpMinParser.IdentifierContext, self).__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(OpMinParser.ID, 0)

        def getRuleIndex(self):
            return OpMinParser.RULE_identifier

        def accept(self, visitor):
            if hasattr(visitor, "visitIdentifier"):
                return visitor.visitIdentifier(self)
            else:
                return visitor.visitChildren(self)




    def identifier(self):
